// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
import { Button } from '@fluentui/react-components';
import { FolderOpenRegular } from '@fluentui/react-icons';
import { render } from '@testing-library/react';
import { InsightsCommandButton } from 'common/components/controls/insights-command-button';
import * as React from 'react';
import {
    expectMockedComponentPropsToMatchSnapshots,
    mockReactComponents,
} from '../../../../mock-helpers/mock-module-helpers';

jest.mock('@fluentui/react-components');
describe('InsightsCommandButton', () => {
    mockReactComponents([Button]);
    it('renders per snapshot with props passed through', () => {
        const renderResult = render(<InsightsCommandButton children={'test-text'} />);
        expect(renderResult.asFragment()).toMatchSnapshot();
        expectMockedComponentPropsToMatchSnapshots([Button]);
    });

    it('renders per snapshot with extra className combined with its own', () => {
        const renderResult = render(<InsightsCommandButton className={'test-extra-class-name'} />);
        expect(renderResult.asFragment()).toMatchSnapshot();
        expectMockedComponentPropsToMatchSnapshots([Button]);
    });

    it('renders per snapshot with iconProps passed through', () => {
        const renderResult = render(
            <InsightsCommandButton
                insightsCommandButtonIconProps={{ icon: <FolderOpenRegular /> }}
            >Load assessment</InsightsCommandButton>
        );
        expect(renderResult.asFragment()).toMatchSnapshot();
        expectMockedComponentPropsToMatchSnapshots([Button]);
    });

    it('renders per snapshot with extra icon className combined with its own', () => {
        const renderResult = render(
            <InsightsCommandButton
                insightsCommandButtonIconProps={{
                    icon: <FolderOpenRegular className: 'icon-class-name' /> }}
            > Load assessment</InsightsCommandButton >
        );
        expect(renderResult.asFragment()).toMatchSnapshot();
        expectMockedComponentPropsToMatchSnapshots([Button]);
    });
});
