// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InsightsCommandButton renders per snapshot with extra className combined with its own 1`] = `
<DocumentFragment>
  <mock-mockconstructor
    classname="insightsCommandButton test-extra-class-name"
    iconprops="[object Object]"
  />
</DocumentFragment>
`;

exports[`InsightsCommandButton renders per snapshot with props passed through 1`] = `
<DocumentFragment>
  <mock-mockconstructor
    classname="insightsCommandButton"
    iconprops="[object Object]"
    text="test-text"
  />
</DocumentFragment>
`;
